update price calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Capstone Project</string>
+    <string name="app_name">Arlin</string>
     <string name="title_activity_bottom_nav">BottomNav</string>
     <string name="title_home">Home</string>
     <string name="title_monitor1">Penggunaan</string>
